[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "petboa"
version = "0.1.0"
description = "Parameter Estimation using Bayesian Optimization"
author = "Sashank Kasiraju; Vlachos Group"
author-email = "skasiraj@udel.edu"
license = "MIT"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "gpytorch <= 1.8.1",
    "botorch <= 0.6.6",
    "nextorch >= 0.1.0",
    "pmutt",
	"SALib"
]

# Specify the minimum Python version required
python_requires = ">=3.7,<=3.11"

# Specify project URLs
project-urls = {
    Documentation = "https://github.com/VlachosGroup/petboa",
    Homepage = "https://github.com/VlachosGroup/petboa",
    Source Code = "https://github.com/VlachosGroup/petboa",
    Issue Tracker = "https://github.com/VlachosGroup/petboa/issues"
}